[package]
name = "slack"
version = "0.23.0"
authors = ["Benjamin Elder <bentheelder@gmail.com>", "Matt Jones <mthjones@gmail.com>", "David Hewson <dev@daveid.co.uk>"]
repository = "https://github.com/slack-rs/slack-rs.git"
documentation = "https://docs.rs/slack"
description = "slack realtime messaging client: https://api.slack.com/bot-users"
license = "Apache-2.0"
edition = "2018"

[dependencies]
slack_api = "0.22.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
tungstenite = "0.9.2"
log = "0.3.7"
url = "2.1.0"
